@@ -6,6 +6,7 @@ Upcoming
 - Added background music from Icelingbolt, nakisee, and TheGur90
 - Disabled rain and thunder in the Ariente dimension
 - Disabled clouds in the Ariente dimension
+- Dungeon cities now have names and these names are also used on the keycards that belong to those cities. That makes it easier to identify what keycards are important for a given city
 
 0.0.22-alpha:
 - Fixed another problem with generated flux levitators crashing
